GS-11419 Browse Articles module needs spacing in Choice the Right School page - problem fix cascaded additional problem to articles page - implemented correction.

--- a/src/webapp/res/css/content/articleCategory.css
+++ b/src/webapp/res/css/content/articleCategory.css
@@ -20,10 +20,15 @@
     padding-right: 5px; *//* GS-7616: IE6 only *//*
 }*/
 
+#contentLeft {
+    float: left;
+    width: 174px;
+    padding:0 5px;
+}
+
 #col_left{
     display:block;
     float:left;
-    padding-left:20px;
 }
 
 #col_left h1 {
